[package]
name = "cactus-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
strum_macros = "0.27.2"
log = "0.4.28"
[dependencies.pyo3]
version = "0.27.2"
# Enabling this cargo feature will cause PyO3 to start a Python interpreter on first call to `Python::attach`
features = ["auto-initialize"]