[package]
name = "cactus-system"
version = "0.1.0"
edition = "2024"

[dependencies]

cactus-foundation = { path = "./cactus-foundation" }
cactus-ingest = { path = "./cactus-ingest" }
cactus-lang = { path = "./cactus-lang" }
cactus-interpreter = { path = "./cactus-interpreter" }

tracing = "0.1.41"
tracing-subscriber = "0.3.20"