[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
libloading = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
bincode = "1"
serde = { version = "1", features = ["derive"] }
plugin_api = { path = "../plugin_api" }